--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "tractorcow/silverstripe-fluent": "4.0.0-rc1",
         "silverstripe/registry": "2.0.0@stable",
         "cwp/starter-theme": "2.0.0-rc1",
-        "colymba/gridfield-bulk-editing-tools": "3.0.x-dev as 3.x-dev"
+        "colymba/gridfield-bulk-editing-tools": "3.x-dev"
     },
     "suggest": {
         "silverstripe/recipe-content-blocks": "Supplement the CMS with a 'content block' approach to editing"
